# metaflowmics

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  Dockerfile  Dockerfile_R  Dockerfile_mothur  Dockerfile_python  Makefile  README.md  README.rst  build_conda_env  build_conda_env.sh  main.bak  main.nf  makefile  metaflowmics-R.dockerfile  metaflowmics-python.dockerfile  metaflowmics-scripts.dockerfile  mothur.dockerfile  nextflow.config  pipeline-env.dockerfile  python.dockerfile  r.dockerfile
Pipeline-16S/: README.md  README_conda.md  main.nf  nextflow.config
Pipeline-ITS/: #main.nf#  .gitignore  README.md  main.nf  nextflow.config
conf/: base.config  docker.config  gcp.config  lani.config  local.config  manoa_hpc.config  manoa_hpc_base.config  poire.config  radis.config  singularity.config  singularity_test.config  test_manoa_hpc.config
databases/: test.tax
docker/: biotools.dockerfile  metaflowmics-R.dockerfile  metaflowmics-python.dockerfile  muscle.dockerfile
metaflowmics/: makefile
metaflowmics/multithreaded-demux/rust/rust-demux/: Cargo.toml  error_model.html  freqs_interp.npy  freqs_raw.npy  plot_bokeh.py
metaflowmics/multithreaded-demux/rust/rust-demux/src/: error_model.rs  lib.rs  main.rs
metagenomics-pipelines/: makefile
multithreaded_demux/: README.md  dada_demux_index.py  demux_fastq.py  demux_index.py  demux_single_index.py  error_model.py  guess_matching_order.sh  hamming_demux_index.py  load.py  main.nf  nextflow.config  plot_sample_size_distribution.py
scripts/: #mothur.sh#  .#mothur.sh  count_summary.py  counter.py  util.R  (+7 more)
(+835 files in other folders)
