[package]
name = "rust_demux"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seq_io = "0.3.1"
csv = "1.1.6"
itertools = "0.10.1"
pav_regression = { git = "https://github.com/sanity/pav.rs" }
ndarray = "0.15.3"
ndarray-npy = "0.8.0"
clap = "2.33.3"
